# src/main/resources/swagger.yaml
@@ -12,7 +12,7 @@ externalDocs:
 tags:
   - name: User
     description: all endpoints related to users
-  - name: Room
+  - name: RoomDomainModel
     description: all endpoints related to rooms
   - name: Booking
     description: all endpoints related to bookings
@@ -57,7 +57,7 @@ paths:
   /rhitmo-hospede/v1/room:
     post:
       tags:
-        - Room
+        - RoomDomainModel
       summary: Create a new room
       description: Create a new room
       operationId: createRoom
@@ -94,7 +94,7 @@ paths:
   /rhitmo-hospede/v1/room/{roomId}/booking:
     get:
       tags:
-        - Room
+        - RoomDomainModel
       summary: obtains all reservations made for the specified room
       description: obtains all reservations made for the specified room
       operationId: getRoomBookings
@@ -135,7 +135,7 @@ paths:
   /rhitmo-hospede/v1/rooms:
     get:
       tags:
-        - Room
+        - RoomDomainModel
       summary: get all available rooms for the selected date
       description: get all available rooms for the selected date
       operationId: getAllAvailableRooms
@@ -341,12 +341,12 @@ components:
           type: string
           format: string
           example: Quarto com vista oara p amor
-          description: Room description
+          description: RoomDomainModel description
         dailyAmount:
           type: number
           format: double
           example: 39.90
-          description: Room daily amount
+          description: RoomDomainModel daily amount
     CreateRoomPostHttpResponse:
       type: object
       properties:
@@ -354,12 +354,12 @@ components:
           type: integer
           format: integer
           example: 1
-          description: Room id
+          description: RoomDomainModel id
         dataCriacao:
           type: string
           format: date-time
           example: 2021-08-31T14:00:00.000Z
-          description: Room creation date
+          description: RoomDomainModel creation date
     CreateBookingPostHttpRequest:
       type: object
       required:
@@ -387,7 +387,7 @@ components:
           type: integer
           format: integer
           example: 1
-          description: Room id
+          description: RoomDomainModel id
     ListAvailableRoomsGetHttpResponse:
       type: object
       properties:
@@ -400,17 +400,17 @@ components:
           type: integer
           format: integer
           example: 1
-          description: Room id
+          description: RoomDomainModel id
         description:
           type: string
           format: string
           example: Quarto com vista para o mar
-          description: Room description
+          description: RoomDomainModel description
         dailyAmount:
           type: string
           format: string
           example: "39.90"
-          description: Room daily amount
+          description: RoomDomainModel daily amount
     ObtainRoomBookingsGetHttpResponse:
       type: object
       properties:
@@ -418,17 +418,17 @@ components:
           type: integer
           format: integer
           example: 1
-          description: Room id
+          description: RoomDomainModel id
         description:
           type: string
           format: string
           example: Quarto com vista para o mar
-          description: Room description
+          description: RoomDomainModel description
         dailyAmount:
           type: string
           format: string
           example: "39.90"
-          description: Room daily amount
+          description: RoomDomainModel daily amount
         bookings:
           type: array
           items:
@@ -473,7 +473,7 @@ components:
           type: integer
           format: integer
           example: 1
-          description: Room id
+          description: RoomDomainModel id
     CreateBookingPostHttpResponse:
       type: object
       properties:
